# quickparse

./: README.md  pyproject.toml  quickparse.py  quickparse_test.py  shell.sh  tests.sh
quickparse/: __init__.py  lib.py  quickparse.py
tests/: test_quickparse.py
