[tool.poetry]
name = "quickparse"
version = "0.1.0"
description = "Simple command line argument parser for Python"
authors = ["silkyanteater <cyclopesrufus@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
